# challenge-leaderboard

./: DEPLOYMENT.md  README.md  deadline_exceptions.yml  pyproject.toml  teams.yml
.github/workflows/: build-and-deploy.yml  score-daily.yml  validate-pr.yml
data/: scores.parquet
modelcard/a_team/: MODEL_CARD.md
scripts/: apply_joker.py  build_leaderboard.py  score_day.py  validate_submission.py
src/challenge_leaderboard/: joker.py  validation.py
submissions/macl2l/: 2026-07-19.csv
submissions/team_4/: 2026-05-26.csv
submissions/team_4_optuna/: 2026-06-01.csv
submissions/team_immerzuspaet/: 2026-06-23.csv  2026-06-30.csv
templates/: leaderboard.html.j2
tests/: test_joker.py  test_validate_submission.py  test_workflows_yaml.py
